[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Bullet/Normal_Bullet.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Bullet/normalBullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 10.1851

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.49364, 8.32739 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 93.02
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.960784, 1, 0, 1 )

[node name="normalBullet" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0202174, 0 )
shape = SubResource( 1 )
disabled = true

[node name="CollisionRange" type="Area2D" parent="."]

[node name="rangeShape" type="CollisionShape2D" parent="CollisionRange"]
position = Vector2( -0.020225, 0 )
shape = SubResource( 3 )

[node name="explosion" type="Particles2D" parent="."]
modulate = Color( 0.823529, 0.243137, 0.243137, 1 )
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
process_material = SubResource( 2 )

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 1.2

[node name="TimerRunout" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="CollisionRange" to="." method="_on_CollisionRange_body_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
[connection signal="timeout" from="TimerRunout" to="." method="_on_TimerRunout_timeout"]
